# LinRegICP

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
src/CYBP_backend/: CYBP_backend.did  Cargo.toml
src/CYBP_backend/src/: lib.rs
src/CYBP_frontend/: package.json
src/CYBP_frontend/src/: App.vue
