[package]
name = "CYBP_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.10"
ic-cdk = "0.16.0"
ic-cdk-macros = "0.16.0"
serde = "1.0.152"
serde_json = "1.0.93"
serde_bytes = "0.11.9"
linregress = "0.5.3" # Use the latest version compatible with your code
